--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -1,78 +1,127 @@
 .main-container {
-    max-width: 980px;
-    margin: 0 auto;
-    padding: 50px 0;
-    text-align: center;
+	max-width: 980px;
+	margin: 0 auto;
+	padding: 50px 0;
+	text-align: center;
 }
 
 .main-container ul {
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px;
-    margin-top: 50px;
+	list-style: none;
+	display: grid;
+	/* grid-template-columns: 1fr 1fr 1fr; */
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 30px;
+	margin-top: 50px;
 }
 
-
-.main-container ul li{
-    display: flex;
-    flex-direction: column;
+.main-container ul li {
+	display: flex;
+	flex-direction: column;
 }
 
 .main-container ul li img {
-    max-width: 100%;
+	max-width: 100%;
+	border-radius: 5px 5px 0 0;
 }
-
 
 .main-container ul li footer {
-    flex: 1;
-    background: #FFF;
-    border: 1px solid #eee;
-    padding: 15px 20px;
-    text-align: left;
-    border-radius: 0 0 5px 5px;
+	flex: 1;
+	background: #fff;
+	border: 1px solid #eee;
+	padding: 15px 28px;
+	text-align: left;
+	border-radius: 0 0 5px 5px;
 }
 
-
-.main-container ul li footer strong {
-    font-size: 16px;
-    color: #333;
+.main-container ul li footer a {
+	font-size: 16px;
+	color: #333;
+	text-decoration: none;
 }
 
+.main-container ul li footer a:hover {
+	text-decoration: underline;
+}
 
 .main-container ul li footer p {
-    font-size: 14px;
-    line-height: 20px;
-    color: #999;
-    margin-top: 5px;
+	font-size: 14px;
+	line-height: 20px;
+	color: #999;
+	margin-top: 5px;
 }
-
 
 .main-container ul li .buttons {
-    margin-top: 10px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-}
-
-
-.main-container ul li .buttons button {
-    height: 50px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
-    border: 0;
-    border-radius: 4px;
-    background: #fff;
-    cursor: pointer;
+	margin-top: 10px;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 10px;
 }
 
 .main-container ul li .buttons button {
-    transform:  translateY(-5px);
-    transition: all 0.2s;
+	height: 50px;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+	border: 0;
+	border-radius: 4px;
+	background: #fff;
+	cursor: pointer;
+}
+
+.main-container ul li .buttons button:hover img {
+	transform: translateY(-5px);
+	transition: all 0.2s;
 }
 
 .main-container .empty {
-    font-size: 32px;
-    color: #999;
-    font-weight: bold;
-    margin-top: 300px;
+	font-size: 32px;
+	color: #999;
+	font-weight: bold;
+	margin-top: 300px;
+}
+
+.match-container {
+	/* Algumas modificações para que o match popup fique sempre na frente dos outros itens */
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background: rgba(0, 0, 0, 0.8);
+	z-index: 10000;
+}
+
+.match-container .avatar {
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	border: 5px solid #fff;
+	margin: 30px 0;
+}
+
+.match-container strong {
+	font-size: 32px;
+	color: #fff;
+}
+
+.match-container p {
+	margin-top: 10px;
+	font-size: 20px;
+	line-height: 30px;
+	max-width: 400px;
+	color: rgba(255, 255, 255, 0.8)
+}
+
+.match-container button {
+	border: 0;
+	background: none;
+	font-weight: bold;
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 18px;
+	margin-top: 30px;
+	cursor: pointer;
 }
